// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Grid/Row should render as expected, without crashing 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row xAlign should honour an xAlign of "center" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row xAlign should honour an xAlign of "right" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row yAlign should honour a yAlign of "bottom" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row yAlign should honour a yAlign of "center" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row yAlign should honour a yAlign of "stretch" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;

exports[`Components/Grid/Row yAlign should honour a yAlign of "top" 1`] = `
.c1 {
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  max-width: 100%;
  min-height: 1px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-right: -0.75rem;
  margin-left: -0.75rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:48em) {
  .c1 {
    padding-right: 0.9375rem;
    padding-left: 0.9375rem;
  }
}

@media (min-width:48em) {
  .c0 {
    margin-right: -0.9375rem;
    margin-left: -0.9375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Column 1
  </div>
  <div
    class="c1"
  >
    Column 2
  </div>
  <div
    class="c1"
  >
    Column 3
  </div>
</div>
`;
